# optimize_crossword

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
optimize_crossword/: data_structures.py  generation_module.py  main.py  output.py  usecases.py  validators.py
